--- a/rails/app/assets/stylesheets/cms/layout.scss
+++ b/rails/app/assets/stylesheets/cms/layout.scss
@@ -45,7 +45,7 @@ z-indicies:
   min-width: 600px;
   height: 100vh;
   overflow-y: scroll;
-  overflow-x: visible;
+  overflow-x: hidden;
 }
 
 .top-bar {
